chore: added primary and secondary colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <rising-sun width="250px"></rising-sun>
+      <rising-sun></rising-sun>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
