chore: ported animation to WAAPI

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <rising-sun></rising-sun>
+      <rising-sun primary-color="#ff6160" secondary-color="#ffe3e2" background-color="#f2f3f7"></rising-sun>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
