--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="/vite.svg" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<link
 			rel="stylesheet"
-			href="/styles.css" />
+			href="styles.css" />
 		<title>Rising Sun – Docs & Demo</title>
 	</head>
 
@@ -81,6 +77,6 @@
 		</div>
 		<script
 			type="module"
-			src="/src/main.js"></script>
+			src="src/main.js"></script>
 	</body>
 </html>
